--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "http-proxy-middleware": "^3.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
     "react-router": "^7.9.2",
     "react-router-dom": "^7.9.3"
   },
