--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-proxy-middleware": "^3.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-grid-layout": "^1.5.2",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-router": "^7.9.2",
